--- a/css/style.css
+++ b/css/style.css
@@ -8,33 +8,43 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
-
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container{
+    width: 1050px;
+    margin: 70px 0;
+}
 
 /* ----------------------
     header styles
 -------------------------*/
 header{
     background-color: #2D25A0;
-    height: 591px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding: 86px 0;
 }
 .header-container{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 1143px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-header h1{
+.header-title{
     font-size: 64px;
-    color: #FFFFFF;
     line-height: 80px;
+    color: #FFFFFF;
     margin-top: 0;
     margin-bottom: 37px;
+    transition: transform 1s ease-in-out;
 }
-
+.header-title:hover{
+    transform: scale(1.2);
+}
 header a{
     text-decoration: none;
     background-color: #E02C6D;
@@ -43,29 +53,22 @@ header a{
     font-size: 16px;
     font-weight: 500;
 }
-
 .fa-arrow-right{
     margin-left: 8px;
 }
 .banner img{
+    /* border: 1px solid red; */
     width: 556px;
 }
 
 /* ----------------------
     players styles
 -------------------------*/
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 .players{
-    width: 1050px;
     display: grid;
     grid-template-columns: repeat(3, 330px);
     grid-column-gap: 30px;
     grid-row-gap: 27px;
-    margin-top: 70px;
 }
 .player{
     width: 300px;
@@ -81,17 +84,16 @@ main{
     footer styles
 -------------------------*/
 footer{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     text-align: center;
     padding: 63px 0;
-    margin-top: 95px;
 }
 footer img{
+    /* border: 1px solid rebeccapurple; */
     width: 484px;
-    border: 1px solid rebeccapurple;
 }
 .social-icons{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 170px;
     display: flex;
     justify-content: space-between;
@@ -105,7 +107,79 @@ footer img{
     color: #969BAB;
 }
 footer p{
-    border: 1px solid #E02C6D;
+    /* border: 1px solid #E02C6D; */
     font-size: 18px;
     margin: 0;
+}
+
+/* -------------------
+    Media Queries 
+-----------------------*/
+
+/* Mobile Devices */
+@media only screen and (max-width: 688px) {
+    header{
+        padding: 60px 0;
+    }
+    .header-container, 
+    .container{
+        width: 90%;
+    }
+    .header-container{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .header-container h1{
+        font-size: 36px;
+        line-height: 50px;
+    }
+    .banner img{
+        width: 100%;
+        margin-top: 50px;
+    }
+    .container{
+        margin: 47px 0;
+    }
+    .players{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player{
+        margin: 0 auto;
+    }
+    footer{
+        padding: 43px 0;
+    }
+    footer img{
+        width: 275px;
+    }
+}
+
+/* tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    header{
+        padding: 75px 0;
+    }
+    .header-container, 
+    .container{
+        width: 90%;
+    }
+    .header-container h1{
+        font-size: 45px;
+        line-height: 65px;
+    }
+    .banner img{
+        width: 320px;
+    }
+    .container{
+        margin: 60px 0;
+    }
+    .players{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    footer{
+        padding: 43px 0;
+    }
+    footer img{
+        width: 275px;
+    }
 }
