--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,11 @@ main{
 }
 .container{
     width: 1050px;
-    margin: 70px 0;
+    margin-bottom: 70px;
+}
+h2{
+    font-size: 40px;
+    text-align: center;
 }
 
 /* ----------------------
@@ -28,7 +32,6 @@ header{
     padding: 86px 0;
 }
 .header-container{
-    /* border: 1px solid red; */
     width: 1143px;
     display: flex;
     justify-content: space-between;
@@ -57,7 +60,6 @@ header a{
     margin-left: 8px;
 }
 .banner img{
-    /* border: 1px solid red; */
     width: 556px;
 }
 
@@ -69,6 +71,7 @@ header a{
     grid-template-columns: repeat(3, 330px);
     grid-column-gap: 30px;
     grid-row-gap: 27px;
+    margin-top: 70px;
 }
 .player{
     width: 300px;
@@ -79,21 +82,33 @@ header a{
     width: 300px;
     height: 256px;
 }
+.player p{
+    text-align: justify;
+}
 
+/* ----------------------
+    country styles
+-------------------------*/
+.countries{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+}
+.country img{
+    width: 100%;
+    box-shadow: 10px 10px 60px lightgray;
+}
 /* ----------------------
     footer styles
 -------------------------*/
 footer{
-    /* border: 1px solid green; */
     text-align: center;
     padding: 63px 0;
 }
 footer img{
-    /* border: 1px solid rebeccapurple; */
     width: 484px;
 }
 .social-icons{
-    /* border: 1px solid red; */
     width: 170px;
     display: flex;
     justify-content: space-between;
@@ -107,7 +122,6 @@ footer img{
     color: #969BAB;
 }
 footer p{
-    /* border: 1px solid #E02C6D; */
     font-size: 18px;
     margin: 0;
 }
@@ -140,7 +154,8 @@ footer p{
     .container{
         margin: 47px 0;
     }
-    .players{
+    .players,
+    .countries{
         grid-template-columns: repeat(1, 1fr);
     }
     .player{
@@ -173,7 +188,8 @@ footer p{
     .container{
         margin: 60px 0;
     }
-    .players{
+    .players,
+    .countries{
         grid-template-columns: repeat(2, 1fr);
     }
     footer{
